archive/test-drive-cfn_V1.8.json
{
  "AWSTemplateFormatVersion": "2010-09-09",

  "Description": "Install VM-Series helper, WordPress server, and database fronted by firewall (test-drive).",

  "Parameters": {
    "FWInstancePassword": {
      "Description": "Password for VM-Series-Helper WebUI and initial Firewall's admin password",
      "Type": "String",
      "MinLength": "1",
      "MaxLength": "40",
      "NoEcho": "true",
      "Default": "paloalto"
    },

    "ServerKeyName": {
      "Description": "Name of an existing EC2 KeyPair to enable SSH access to the server and VM-Series helper instance (Hint: You MUST have its private key)",
      "Type": "AWS::EC2::KeyPair::KeyName",
      "Default": "cft-keypair"
    }
  },

  "Mappings": {
    "PANFWRegionMap" : {
      "us-west-2"     : { "AMI": "ami-9dd0ddad"}
    },

    "UbuntuAWSRegionMap" : {
      "us-west-2"      : { "AMI": "ami-3dead50d" }
    },

    "WPDBRegionMap" : {
      "us-west-2"      : { "AMI": "ami-a1dfe791" }
    },

    "WPWEBRegionMap" : {
      "us-west-2"      : { "AMI": "ami-55e2da65" }
    }
  },

  "Resources": {
    "VMseriesHelperSNSTopic" : {
      "Type" : "AWS::SNS::Topic",
      "Metadata": { "Comment": "No Topic or Name specified, ID will be autogenerated and used" },
      "Properties" : {
        "Subscription" : [ {
          "Endpoint" : { "Fn::GetAtt" : ["VMseriesHelperQueue", "Arn"]},
          "Protocol" : "sqs"
        } ]
      }
    },

    "VMseriesHelperQueue" : {
      "Type" : "AWS::SQS::Queue"
    },

    "VMseriesHelperUser" : {
     "Type" : "AWS::IAM::User"
    },

    "VMseriesHelperUserKey" : {
     "Type" : "AWS::IAM::AccessKey",
     "Properties" : {
          "UserName" : {"Ref": "VMseriesHelperUser"}
      }
    },

    "VMseriesHelperQueueGroup" : {
      "Type" : "AWS::IAM::Group",
      "Properties" : {
        "Policies": [ {
          "PolicyName": "VMseriesHelperQueueGroupPolicy",
          "PolicyDocument": {
            "Statement":[ {
              "Effect":"Allow",
              "Action":[ "sqs:DeleteMessage", "sqs:ReceiveMessage" ],
              "Resource":[ { "Fn::GetAtt" : ["VMseriesHelperQueue", "Arn"]} ]
            }]
          }
        },
        {
          "PolicyName": "VMseriesHelperKeyPairGroupPolicy",
          "PolicyDocument": {
            "Statement":[ {
              "Effect":"Allow",
              "Action":[ "ec2:CreateKeyPair" ],
              "Resource":[ "*" ]          
            }]
          }
        }]
      }
    },

    "AddUserToVMseriesHelperQueueGroup" : {
      "Type" : "AWS::IAM::UserToGroupAddition",
      "Properties" : {
        "GroupName": {"Ref" : "VMseriesHelperQueueGroup"},
        "Users" : [{ "Ref" : "VMseriesHelperUser" }]
      }
    },

    "VMseriesHelperQueuePolicy" : {
      "Type" : "AWS::SQS::QueuePolicy",
      "Properties" : {
        "PolicyDocument":  {
          "Id":"VMseriesHelperQueuePolicy",
          "Statement" : [ {
            "Sid":"VMSeriesHelper-Allow-SendMessage-To-Queue-From-SNS",
             "Effect":"Allow",
             "Principal" : {"AWS" : "*"},
              "Action":["sqs:SendMessage"],
             "Resource": "*",
            "Condition": {
              "ArnEquals": { "aws:SourceArn": { "Ref" : "VMseriesHelperSNSTopic" } }
            }
          } ]
        },
        "Queues" : [{"Ref" : "VMseriesHelperQueue"}]
      }
    },

    "VMSeriesHelperInstance": {
      "Type" : "AWS::EC2::Instance",
      "CreationPolicy": {
        "ResourceSignal": {
          "Timeout": "PT10M"
        }
      },
      "Properties" : {
          "DisableApiTermination" : "false",
          "ImageId" : { "Fn::FindInMap" : [ "UbuntuAWSRegionMap", { "Ref" : "AWS::Region" }, "AMI" ] },
          "InstanceType" : "t2.micro",
          "KeyName" : { "Ref": "ServerKeyName" },
          "SubnetId": { "Ref": "AWS::NoValue" },
          "SecurityGroupIds": [ { "Ref": "AWS::NoValue" } ],
          "Tags": [{ "Key": "Name", "Value": "VM-Serier helper (VMSH)" }],
          "UserData" : { "Fn::Base64" : { "Fn::Join" : ["\n", [
            "#cloud-config",

            "apt_update: false",
            "package_upgrade: false",

            "runcmd:",
            "    - [pip, install, pan-python]",
            "    - [git, clone, --recursive, \"https://github.com/PaloAltoNetworks-BD/cfn-vm-series-helper-demo.git\", /opt/cfn-vm-series-helper-demo]",
            "    - [date]",
            { "Fn::Join": ["", ["    - [export, AWS_REGION=", { "Ref": "AWS::Region" }, "]"]] },
            { "Fn::Join": ["", ["    - [export, AWS_ACCESS_KEY_ID=", { "Ref": "VMseriesHelperUserKey" }, "]"]] },
            { "Fn::Join": ["", ["    - [export, AWS_SECRET_ACCESS_KEY=", {"Fn::GetAtt" : ["VMseriesHelperUserKey", "SecretAccessKey"]}, "]"]] },
            { "Fn::Join": ["", ["    - [export, \"KEYNAME=", "VMSH-", { "Ref": "AWS::StackName" }, "\"]"]] },
            { "Fn::Join": ["", ["    - [export, \"AWS_SQS_URL=", { "Ref" : "VMseriesHelperQueue" }, "\"]"]] },
            "    - [python, /opt/cfn-vm-series-helper-demo/installer.py]",
            "    - [start, vmsh]",
            "    - [rm, /etc/nginx/sites-enabled/default]",
            "    - [cp, /opt/cfn-vm-series-helper-demo/etc/vmsh, /etc/nginx/sites-enabled/]",
            { "Fn::Join": ["", ["    - [/opt/cfn-vm-series-helper-demo/etc/htpasswd.sh, ", { "Ref" : "FWInstancePassword" }, ", /etc/nginx/vmsh-htpasswd]"]] },
            "    - [service, nginx, restart]",
            "    - [pip, install, \"https://s3.amazonaws.com/cloudformation-examples/aws-cfn-bootstrap-latest.tar.gz\"]",
            { "Fn::Join": ["", ["    - [cfn-signal, -e 0, --stack, ", { "Ref" : "AWS::StackName" }, ", --region, ", { "Ref" : "AWS::Region" },", --resource, VMSeriesHelperInstance]"]] },

            "output: {all: '| tee -a /var/log/cloud-config-output.log'}"
            ]]}
          }
      }
    },

    "NewVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "true",
        "Tags": [{ "Key": "Name", "Value": "PAN Test Drive" }]
      }
    },

    "PublicElasticIP": {
       "Type" : "AWS::EC2::EIP",
       "Properties" : {
          "Domain" : "vpc"
       },
       "DependsOn": [ "NewVPC" ]
    },

    "ManagementElasticIP": {
       "Type" : "AWS::EC2::EIP",
       "Properties" : {
          "Domain" : "vpc"
       },
       "DependsOn": [ "NewVPC" ]
    },

    "NewDBSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.2.0/24",
        "AvailabilityZone": "us-west-2a",
        "VpcId": {"Ref": "NewVPC"},
        "Tags": [{ "Key": "Name", "Value": "PAN Test Drive" }]
      },
      "DependsOn": "NewVPC"
    },

    "NewPublicSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "AvailabilityZone": "us-west-2a",
        "VpcId": {"Ref": "NewVPC"},
        "Tags": [{ "Key": "Name", "Value": "PAN Test Drive" }]
      },
      "DependsOn": "NewVPC"
    },

    "NewWebSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "us-west-2a",
        "VpcId": {"Ref": "NewVPC"},
        "Tags": [{ "Key": "Name", "Value": "PAN Test Drive" }]
      },
      "DependsOn": "NewVPC"
    },

    "igweb3def8e": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [{ "Key": "Name", "Value": "PAN Test Drive" }]
      }
    },

    "dopt21c7d043": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "us-west-2.compute.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },

    "aclb765d6d2": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {"Ref": "NewVPC"}
      }
    },

    "rtb059a2460": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {"Ref": "NewVPC"}
      }
    },

    "rtb049a2461": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {"Ref": "NewVPC"}
      }
    },

    "FWManagementNetworkInterface": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "Description": "AWS FW1 MGMT",
        "SubnetId": {"Ref": "NewPublicSubnet"},
        "SourceDestCheck": "false",
        "PrivateIpAddresses": [
          {
            "PrivateIpAddress": "10.0.0.99",
            "Primary": "true"
          }
        ],
        "GroupSet": [{"Ref": "sgWideOpen"}],
        "Tags": [{"Key": "Name","Value": "WP AWS FW1 MGMT"}]
      },
      "DependsOn": [ "sgWideOpen" ]
    },

    "FWPublicNetworkInterface": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "Description": "AWS FW1 E1/1",
        "SubnetId": {"Ref": "NewPublicSubnet"},
        "SourceDestCheck": "false",
        "PrivateIpAddresses": [
          {
            "PrivateIpAddress": "10.0.0.100",
            "Primary": "true"
          }
        ],
        "GroupSet": [{"Ref": "sgWideOpen"}],
        "Tags": [{"Key": "Name","Value": "WP AWS FW1 E1/1"}]
      },
      "DependsOn": [ "sgWideOpen" ]
    },

    "FWPrivate12NetworkInterface": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "Description": "AWS FW1 E1/2",
        "SubnetId": {"Ref": "NewWebSubnet"},
        "SourceDestCheck": "false",
        "PrivateIpAddresses": [
          {
            "PrivateIpAddress": "10.0.1.11",
            "Primary": "true"
          }
        ],
        "GroupSet": [{"Ref": "sgWideOpen"}],
        "Tags": [{"Key": "Name","Value": "WP AWS FW1 E1/2"}]
      },
      "DependsOn": [ "sgWideOpen" ]
    },

    "FWPrivate13NetworkInterface": {
      "Type": "AWS::EC2::NetworkInterface",
      "Properties": {
        "Description": "AWS FW1 E1/3",
        "SubnetId": {"Ref": "NewDBSubnet"},
        "SourceDestCheck": "false",
        "PrivateIpAddresses": [
          {
            "PrivateIpAddress": "10.0.2.11",
            "Primary": "true"
          }
        ],
        "GroupSet": [{"Ref": "sgWideOpen"}],
        "Tags": [{"Key": "Name", "Value": "WP AWS FW1 E1/3"}]
      },
      "DependsOn": [ "sgWideOpen" ]
    },

    "FWEIPMAnagementAssociation": {
       "Type": "AWS::EC2::EIPAssociation",
       "Properties": {
          "AllocationId": { "Fn::GetAtt": [ "ManagementElasticIP", "AllocationId" ] },
          "NetworkInterfaceId": { "Ref": "FWManagementNetworkInterface" }
       },
       "DependsOn": [ "FWManagementNetworkInterface", "ManagementElasticIP" ]
    },

    "FWEIPPublicAssociation": {
       "Type": "AWS::EC2::EIPAssociation",
       "Properties": {
          "AllocationId": { "Fn::GetAtt": [ "PublicElasticIP", "AllocationId" ] },
          "NetworkInterfaceId": { "Ref": "FWPublicNetworkInterface" }
       },
       "DependsOn": [ "FWPublicNetworkInterface", "PublicElasticIP" ]
    },

    "AWSMonitorUser" : {
     "Type" : "AWS::IAM::User"
    },

    "AWSMonitorUserKey" : {
     "Type" : "AWS::IAM::AccessKey",
     "Properties" : {
          "UserName" : {"Ref": "AWSMonitorUser"}
      }
    },

    "AWSMonitorPolicy": {
      "Type" : "AWS::IAM::Policy",
      "Properties" : {
          "PolicyName" : "AWSMonitoring",
          "PolicyDocument" : {
            "Version" : "2012-10-17",
            "Statement": [ {
              "Effect": "Allow",
              "Action": "ec2:Describe*",
              "Resource": "*"
            } ]
          },
          "Users" : [ { "Ref" : "AWSMonitorUser" } ]
      }
    },

    "sgWideOpen": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Wide open security group",
        "VpcId": {"Ref": "NewVPC"},
         "Tags": [{"Key": "Name","Value": "Lab External SG"}],
        "SecurityGroupIngress" : [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
        ],
        "SecurityGroupEgress" : [
          {
            "IpProtocol": "-1",
            "CidrIp": "0.0.0.0/0"
          }
          ]
      }
    },

    "acl1": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "aclb765d6d2"
        }
      }
    },

    "acl2": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "aclb765d6d2"
        }
      }
    },

    "subnetacl1": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {"Ref": "aclb765d6d2"},
        "SubnetId": {"Ref": "NewDBSubnet"}
      }
    },
    "subnetacl2": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {"Ref": "aclb765d6d2"},
        "SubnetId": {"Ref": "NewPublicSubnet"}
      }
    },
    "subnetacl3": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {"Ref": "aclb765d6d2"},
        "SubnetId": {"Ref": "NewWebSubnet"}
      }
    },

    "gw1": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {"Ref": "NewVPC"},
        "InternetGatewayId": {"Ref": "igweb3def8e"}
      }
    },

    "subnetroute2": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {"Ref": "rtb049a2461"},
        "SubnetId": {"Ref": "NewPublicSubnet"}
      }
    },

    "route1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {"Ref": "rtb059a2460"},
        "GatewayId": {"Ref": "igweb3def8e"}
      },
      "DependsOn": "gw1"
    },

    "route2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {"Ref": "rtb049a2461"},
        "GatewayId": {"Ref": "igweb3def8e"}
      },
      "DependsOn": "gw1"
    },

    "dchpassoc1": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {"Ref": "NewVPC"},
        "DhcpOptionsId": {"Ref": "dopt21c7d043"}
      }
    },

    "FWInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "EbsOptimized": "true",
        "ImageId": { "Fn::FindInMap" : [ "PANFWRegionMap", { "Ref" : "AWS::Region" }, "AMI" ] },
        "InstanceType": "c3.xlarge",
        "KeyName": { "Fn::Join": ["", [ "VMSH-", { "Ref": "AWS::StackName" } ]]},
        "Monitoring": "false",
        "Tags": [{ "Key": "Name", "Value": "WP VM-Series Firewall" }],
        "NetworkInterfaces": [
          {
            "NetworkInterfaceId": { "Ref": "FWManagementNetworkInterface"},
            "DeviceIndex": 0
          },
          {
            "NetworkInterfaceId": { "Ref": "FWPublicNetworkInterface"},
            "DeviceIndex": 1
          },
          {
            "NetworkInterfaceId": { "Ref": "FWPrivate12NetworkInterface"},
            "DeviceIndex": 2
          },
          {
            "NetworkInterfaceId": { "Ref": "FWPrivate13NetworkInterface"},
            "DeviceIndex": 3
          }
        ]
      },
      "DependsOn": [ "VMSeriesHelperInstance", "FWPublicNetworkInterface", "FWPrivate12NetworkInterface", "FWPrivate13NetworkInterface", "NewPublicSubnet" ]
    },

    "WPDBServerInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Fn::FindInMap" : [ "WPDBRegionMap", { "Ref" : "AWS::Region" }, "AMI" ] },
        "InstanceType": "t1.micro",
        "KernelId": "aki-fc8f11cc",
        "KeyName": { "Ref": "ServerKeyName" },
        "Monitoring": "false",
        "Tags": [{ "Key": "Name", "Value": "WP DB Server 1" }],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "NewDBSubnet"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.2.101",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgWideOpen"
              }
            ]
          }
        ],
        "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
            "#! /bin/bash\n",

            "exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1\n",

            "echo \"export new_routers='10.0.2.11'\" >> /etc/dhcp/dhclient-enter-hooks.d/aws-default-route\n",
            "ifdown eth0\n",
            "ifup eth0\n"
        ]]}
      }},
      "DependsOn": [ "NewDBSubnet", "sgWideOpen" ]
    },

    "WPWebInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": { "Fn::FindInMap" : [ "WPWEBRegionMap", { "Ref" : "AWS::Region" }, "AMI" ] },
        "InstanceType": "t1.micro", 
        "KernelId": "aki-fc8f11cc",
        "KeyName": { "Ref": "ServerKeyName" },
        "Monitoring": "false",
        "Tags": [{"Key": "Name","Value": "WP Web Server 1"}],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "NewWebSubnet"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.1.101",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgWideOpen"
              }
            ]
          }
        ],
        "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
            "#! /bin/bash\n",

            "exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1\n",

            "cp /etc/wordpress/config-52.10.68.86.php /etc/wordpress/config-",
              { "Ref": "PublicElasticIP" }, 
              ".php\n",
            "echo \"export new_routers='10.0.1.11'\" >> /etc/dhcp/dhclient-enter-hooks.d/aws-default-route\n",
            "ifdown eth0\n",
            "ifup eth0\n"
          ]]}
        }
      },
      "DependsOn": [ "NewWebSubnet", "sgWideOpen", "PublicElasticIP" ]
    },

    "VMSeriesHelper" : {
       "Type": "Custom::VMSeriesHelper",
       "Version" : "0.1",
       "DeletionPolicy": "Retain",
       "Properties" : {
          "ServiceToken": { "Ref": "VMseriesHelperSNSTopic" },
          "PAVMAWSEIPMgmt" : { "Fn::GetAtt": [ "FWInstance", "PublicIp" ]},
          "admin_password": { "Ref": "FWInstancePassword" },
          "IgnorePlaybookFailure": "no",
          "PlaybookURL": "https://s3-us-west-2.amazonaws.com/pantemplates/test-drive-playbook_V1.5.yml",
          "VPCId": {"Ref" : "NewVPC"},
          "AWSMonitorUserAccessKey": { "Ref": "AWSMonitorUserKey" },
          "AWSMonitorUserSecretAccessKey": { "Fn::GetAtt": ["AWSMonitorUserKey", "SecretAccessKey"] },
          "AWSMonitorSource": { "Fn::Join": [".", ["ec2", { "Ref": "AWS::Region" }, "amazonaws", "com" ]]}
       },
       "DependsOn": ["FWEIPPublicAssociation", "AWSMonitorUserKey", "VMseriesHelperSNSTopic" ]
    }
  },

  "Outputs": {
    "FirewallManagementURL": {
      "Description": "VM-Series management interface URL",
      "Value": { "Fn::Join" : ["", [
        "https://",
        { "Fn::GetAtt": [ "FWInstance", "PublicIp" ]}
      ]]}
    },

    "WordpressURL": {
      "Description": "Wordpress server",
      "Value": { "Fn::Join" : ["", [
        "http://",
        { "Ref": "PublicElasticIP" },
        "/wordpress"
      ]]}
    }
  }
}
